--- a/ass17.html
+++ b/ass17.html
@@ -1,20 +1,16 @@
 width: 1000px;
 background-color: rgb(224, 201, 170);
 display: flex;
-flex-direction: column;
 flex-direction: column-reverse;
+justify-content: right;
 padding-left: 20px;
-padding-top: 40px;
 padding-top: 100px;
 }
-.profile-card{
-height: 200px;
-width: 200px;
-background-color: lightgoldenrodyellow;
-border: 2px solid black;
+@@ -20,6 +20,7 @@
 padding: 20px;
 margin-top: 10px;
 margin-bottom: 70px;
+margin: 10px;
 }
 .profile-pic{
 height: 80px;
