--- a/ass17.html
+++ b/ass17.html
@@ -1,12 +1,16 @@
 width: 1000px;
 background-color: rgb(224, 201, 170);
 display: flex;
-flex-direction: column-reverse;
 justify-content: right;
+justify-content: left;
 padding-left: 20px;
 padding-top: 100px;
 }
-@@ -20,6 +20,7 @@
+.profile-card{
+height: 200px;
+width: 200px;
+background-color: lightgoldenrodyellow;
+border: 2px solid black;
 padding: 20px;
 margin-top: 10px;
 margin-bottom: 70px;
