justify content centre property adde

--- a/ass17.html
+++ b/ass17.html
@@ -1,8 +1,8 @@
 width: 1000px;
 background-color: rgb(224, 201, 170);
 display: flex;
-justify-content: right;
 justify-content: left;
+justify-content: center;
 padding-left: 20px;
 padding-top: 100px;
 }
