--- a/ass17.html
+++ b/ass17.html
@@ -1,8 +1,8 @@
 width: 1200px;
 background-color: rgb(224, 201, 170);
 display: flex;
-justify-content: space-evenly;
 justify-content: space-between;
+justify-content: space-around;
 padding: 40px 20px 20px 20px;
 
 }
