--- a/ass17.html
+++ b/ass17.html
@@ -1,65 +1,54 @@
+display: flex;
+flex-direction: column;
+justify-content: right;
+align-items: center;
+align-items: end;
+padding: 50px;
 
-<title>Assignment 17 flex properties</title>
-<style>
-    .profile-container{
-        height: 900px;
-        width: 1200px;
+}
+.profile-card{
+height: 200px;
+width: 200px;
+background-color: lightgoldenrodyellow;
+border: 2px solid black;
+border-radius: 10px;
+padding: 20px;
+margin-top: 10px;
+margin-bottom: 90px;
+margin: 10px;
 
-        background-color: rgb(224, 201, 170);
-        display: flex;
-        justify-content: space-around;
-        padding: 40px 20px 20px 20px;
+}
+.profile-pic{
+height: 80px;
+background-color: white;
+border-radius: 50%;
+position: relative;
+border: 1px solid black;
+left: 60px;
+top: -60px;
+}
+.profile-name{
+text-align: left;
 
-        flex-direction: column;
-        justify-content: right;
-        align-items: center;
-        padding: 50px;
-
-    }
-    .profile-card{
-        height: 200px;
-        width: 200px;
-        background-color: lightgoldenrodyellow;
-        border: 2px solid black;
-        border-radius: 10px;
-        padding: 20px;
-        margin-top: 10px;
-        margin-bottom: 70px;
-        margin-bottom: 90px;
-        margin: 10px;
-
-    }
-    .profile-pic{
-        height: 80px;
-        background-color: white;
-        border-radius: 50%;
-        position: relative;
-        border: 1px solid black;
-        left: 60px;
-        top: -60px;
-    }
-    .profile-name{
-       text-align: left;
-       
-        position: relative;
-        bottom: 30px;
-    }
+position: relative;
+bottom: 30px;
+}
 </style>
 </head>
 <body>
 <div class="profile-container">
-    <div class="profile-card">
-        <img src="pinki.png" alt="pinki mam photo" class="profile-pic">
-        <h1 class="profile-name">Vaibhavi Hole from road to code</h1>
-    </div>
-    <div class="profile-card">
-        <img src="suraj sir.jpeg" alt="suraj sir photo" class="profile-pic">
-        <h1 class="profile-name">Suraj Sir from road to code</h1>
-    </div>
-    <div class="profile-card">
-        <img src="vaishnavi.png" alt="vaishnavi mam photo" class="profile-pic">
-        <h1 class="profile-name">vaishnavi Hole from road to code</h1>
-    </div>
+<div class="profile-card">
+<img src="pinki.png" alt="pinki mam photo" class="profile-pic">
+<h1 class="profile-name">Vaibhavi Hole from road to code</h1>
+</div>
+<div class="profile-card">
+<img src="suraj sir.jpeg" alt="suraj sir photo" class="profile-pic">
+<h1 class="profile-name">Suraj Sir from road to code</h1>
+</div>
+<div class="profile-card">
+<img src="vaishnavi.png" alt="vaishnavi mam photo" class="profile-pic">
+<h1 class="profile-name">vaishnavi Hole from road to code</h1>
+</div>
 </div>
 </body>
 </html>
