--- a/ass17.html
+++ b/ass17.html
@@ -1,8 +1,8 @@
 display: flex;
 flex-direction: column;
 justify-content: right;
-align-items: center;
 align-items: end;
+align-items: start;
 padding: 50px;
 
 }
