--- a/ass17.html
+++ b/ass17.html
@@ -10,10 +10,10 @@
             padding: 50px;
             height: 1000px;
             display: flex;
-            flex-direction:row;;  
+            flex-direction:row; 
             flex-wrap: wrap;
-            justify-content: space-between;
-            
+            justify-content: space-evenly;
+            align-items: center;
                 }
         .profile-card{
             height: 200px;
